Notebooks changed for getting all budget components of all sectors

--- a/notebooks/internal_evaporation.ipynb
+++ b/notebooks/internal_evaporation.ipynb
@@ -482,7 +482,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -532,7 +534,8 @@
     "Evap_Sectors=pd.DataFrame(data=np.nan,columns=[\"mean\",\"std\"],index=[\"S1\",\"S2\",\"S3\",\"S4\"])\n",
     "mean_values=[0.002438,0.00275,-0.015,-0.0038]\n",
     "std_values=[0.006509,0.005,0.0083,0.0101]\n",
-    "#Evap_Sectors[\"mean\"]=[]"
+    "Evap_Sectors[\"mean\"]=mean_values\n",
+    "Evap_Sectors[\"std\"]=std_values"
    ]
   },
   {
