--- a/notebooks/HALO_ICON_Budget_Components_Comparison.ipynb
+++ b/notebooks/HALO_ICON_Budget_Components_Comparison.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\u300737\\AppData\\Local\\anaconda3\\lib\\site-packages\\paramiko\\transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n"
+     ]
+    }
+   ],
    "source": [
     "#!/usr/bin/env python3\n",
     "# -*- coding: utf-8 -*-\n",
@@ -124,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,9 +238,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_precipitation_and_hmps' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 46\u001b[0m\n\u001b[0;32m     44\u001b[0m \u001b[38;5;66;03m# precipitation\u001b[39;00m\n\u001b[0;32m     45\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m HiddenPrints():\n\u001b[1;32m---> 46\u001b[0m     precip_rates,halo_icon_hmp,halo_icon_ivt\u001b[38;5;241m=\u001b[39m\u001b[43mget_precipitation_and_hmps\u001b[49m()\n\u001b[0;32m     47\u001b[0m halo_precip_rates\u001b[38;5;241m=\u001b[39mprecip_rates\n\u001b[0;32m     48\u001b[0m halo_precip_rates\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m=\u001b[39mpd\u001b[38;5;241m.\u001b[39mDatetimeIndex(halo_precip_rates\u001b[38;5;241m.\u001b[39mindex)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'get_precipitation_and_hmps' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#---------------------------------------------------------------------------------------\n",
     "# Moisture transport divergence\n",
@@ -557,7 +578,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -571,7 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
