--- a/notebooks/budget_components_tendency.ipynb
+++ b/notebooks/budget_components_tendency.ipynb
@@ -4,62 +4,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!/usr/bin/env python3\n",
-    "# -*- coding: utf-8 -*-\n",
-    "\"\"\"\n",
-    "Created on Mon Aug 24 16:35:51 2020\n",
-    "\n",
-    "@author: u300737\n",
-    "\"\"\"\n",
-    "import os\n",
-    "import sys\n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import xarray as xr\n",
-    "\n",
-    "start_path=os.getcwd()\n",
-    "ac3_scripts_path=start_path+\"/../scripts/\"\n",
-    "my_git_path=start_path+\"/../../\"\n",
-    "major_work_path=my_git_path+\"/../Work/GIT_Repository/\"\n",
-    "hamp_processing_path=my_git_path+\"/hamp_processing_python/\"\n",
-    "\n",
-    "synth_ar_path=my_git_path+\"/Synthetic_Airborne_Arctic_ARs/\"\n",
-    "retrieval_src_path=my_git_path+\"/hamp_retrieval_haloac3/\"\n",
-    "config_path=synth_ar_path+\"config/\"\n",
-    "sys.path.insert(1,config_path)\n",
-    "sys.path.insert(2,ac3_scripts_path)\n",
-    "sys.path.insert(3,synth_ar_path+\"src/\")\n",
-    "sys.path.insert(4,synth_ar_path+\"plotting/\")\n",
-    "sys.path.insert(5,hamp_processing_path)\n",
-    "sys.path.insert(6,hamp_processing_path+\"plotting/\")\n",
-    "sys.path.insert(7,retrieval_src_path+\"src/\")\n",
-    "sys.path.insert(8,start_path+\"/../plotting/\")\n",
-    "import data_config\n",
-    "###############################################################################\n",
-    "import flightcampaign\n",
-    "import moisturebudget as Budgets\n",
-    "###############################################################################\n",
-    "#Grid Data\n",
-    "from reanalysis import ERA5,CARRA \n",
-    "from ICON import ICON_NWP as ICON\n",
-    "import gridonhalo as Grid_on_HALO\n",
-    "###############################################################################\n",
-    "#-----------------------------------------------------------------------------#\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "class HiddenPrints:\n",
-    "    def __enter__(self):\n",
-    "        self._original_stdout = sys.stdout\n",
-    "        sys.stdout = open(os.devnull, 'w')\n",
-    "\n",
-    "    def __exit__(self, exc_type, exc_val, exc_tb):\n",
-    "        sys.stdout.close()\n",
-    "        sys.stdout = self._original_stdout"
-   ]
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\u300737\\AppData\\Local\\anaconda3\\lib\\site-packages\\paramiko\\transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
+      "  \"class\": algorithms.Blowfish,\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -329,7 +284,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -343,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
