--- a/notebooks/backup/backup_sonde_calc_divergence_plots.ipynb
+++ b/notebooks/backup/backup_sonde_calc_divergence_plots.ipynb
@@ -799,7 +799,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -813,7 +813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
