New plotting of AR events for Campaign Overview paper and budget closure paper (RF05). WV tendency notebook tidied up, slight changes in dropsonde based evaporation

--- a/notebooks/internal_evaporation.ipynb
+++ b/notebooks/internal_evaporation.ipynb
@@ -104,12 +104,14 @@
        "      <th>Interp_LWP</th>\n",
        "      <th>Interp_IWP</th>\n",
        "      <th>Interp_IVT</th>\n",
+       "      <th>Interp_SST</th>\n",
        "      <th>IVT_max_distance</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
+       "      <td>11100.000000</td>\n",
        "      <td>11100.000000</td>\n",
        "      <td>11100.000000</td>\n",
        "      <td>11100.000000</td>\n",
@@ -136,6 +138,7 @@
        "      <td>64.103600</td>\n",
        "      <td>64.630378</td>\n",
        "      <td>317.984140</td>\n",
+       "      <td>274.248823</td>\n",
        "      <td>9.657791e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -151,6 +154,7 @@
        "      <td>40.106605</td>\n",
        "      <td>59.310235</td>\n",
        "      <td>113.896472</td>\n",
+       "      <td>2.238907</td>\n",
        "      <td>7.694805e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -166,6 +170,7 @@
        "      <td>4.025799</td>\n",
        "      <td>0.370804</td>\n",
        "      <td>129.540810</td>\n",
+       "      <td>271.460449</td>\n",
        "      <td>-3.501481e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -181,6 +186,7 @@
        "      <td>31.734223</td>\n",
        "      <td>13.600789</td>\n",
        "      <td>219.301754</td>\n",
+       "      <td>272.475696</td>\n",
        "      <td>2.809600e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -196,6 +202,7 @@
        "      <td>60.268500</td>\n",
        "      <td>44.546095</td>\n",
        "      <td>347.266875</td>\n",
+       "      <td>273.598646</td>\n",
        "      <td>9.787637e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -211,6 +218,7 @@
        "      <td>96.231072</td>\n",
        "      <td>119.476279</td>\n",
        "      <td>418.038945</td>\n",
+       "      <td>276.365117</td>\n",
        "      <td>1.646911e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -226,6 +234,7 @@
        "      <td>158.051539</td>\n",
        "      <td>190.198071</td>\n",
        "      <td>488.873875</td>\n",
+       "      <td>278.451862</td>\n",
        "      <td>2.257273e+06</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -253,15 +262,25 @@
        "75%           3.500000     15.611252      0.016267       0.271124   \n",
        "max          13.250000     16.595042      0.056041       0.624785   \n",
        "\n",
-       "         Interp_LWP    Interp_IWP    Interp_IVT  IVT_max_distance  \n",
-       "count  11100.000000  11100.000000  11100.000000      1.110000e+04  \n",
-       "mean      64.103600     64.630378    317.984140      9.657791e+05  \n",
-       "std       40.106605     59.310235    113.896472      7.694805e+05  \n",
-       "min        4.025799      0.370804    129.540810     -3.501481e+05  \n",
-       "25%       31.734223     13.600789    219.301754      2.809600e+05  \n",
-       "50%       60.268500     44.546095    347.266875      9.787637e+05  \n",
-       "75%       96.231072    119.476279    418.038945      1.646911e+06  \n",
-       "max      158.051539    190.198071    488.873875      2.257273e+06  "
+       "         Interp_LWP    Interp_IWP    Interp_IVT    Interp_SST  \\\n",
+       "count  11100.000000  11100.000000  11100.000000  11100.000000   \n",
+       "mean      64.103600     64.630378    317.984140    274.248823   \n",
+       "std       40.106605     59.310235    113.896472      2.238907   \n",
+       "min        4.025799      0.370804    129.540810    271.460449   \n",
+       "25%       31.734223     13.600789    219.301754    272.475696   \n",
+       "50%       60.268500     44.546095    347.266875    273.598646   \n",
+       "75%       96.231072    119.476279    418.038945    276.365117   \n",
+       "max      158.051539    190.198071    488.873875    278.451862   \n",
+       "\n",
+       "       IVT_max_distance  \n",
+       "count      1.110000e+04  \n",
+       "mean       9.657791e+05  \n",
+       "std        7.694805e+05  \n",
+       "min       -3.501481e+05  \n",
+       "25%        2.809600e+05  \n",
+       "50%        9.787637e+05  \n",
+       "75%        1.646911e+06  \n",
+       "max        2.257273e+06  "
       ]
      },
      "execution_count": 2,
@@ -490,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -515,6 +534,7 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "halo_icon_hmp[\"Interp_EV\"]=-1*halo_icon_hmp[\"Interp_EV\"]\n",
     "halo_icon_hmp[\"Interp_EV\"].plot(label=\"ICON\")\n",
     "halo_era5[\"Interp_E\"].plot(label=\"ERA5\")\n",
     "plt.plot(halo_era5.index,np.zeros(halo_era5.shape[0]),ls=\"--\",lw=3)\n",
@@ -526,9 +546,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>S1</th>\n",
+       "      <td>0.002438</td>\n",
+       "      <td>0.006509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>S2</th>\n",
+       "      <td>0.002750</td>\n",
+       "      <td>0.005000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>S3</th>\n",
+       "      <td>-0.015000</td>\n",
+       "      <td>0.008300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>S4</th>\n",
+       "      <td>-0.003800</td>\n",
+       "      <td>0.010100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        mean       std\n",
+       "S1  0.002438  0.006509\n",
+       "S2  0.002750  0.005000\n",
+       "S3 -0.015000  0.008300\n",
+       "S4 -0.003800  0.010100"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Evap_Sectors=pd.DataFrame(data=np.nan,columns=[\"mean\",\"std\"],index=[\"S1\",\"S2\",\"S3\",\"S4\"])\n",
     "mean_values=[0.002438,0.00275,-0.015,-0.0038]\n",
@@ -536,6 +619,37 @@
     "Evap_Sectors[\"mean\"]=mean_values\n",
     "Evap_Sectors[\"std\"]=std_values\n",
     "Evap_Sectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.008429681186788331\n",
+      "0.0005174798818550748\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Warm sector evaporation\n",
+    "warm_icon_evap=-1*halo_icon_hmp[\"Interp_EV\"].copy()\n",
+    "inflow_times=[\"2022-03-15 10:11\",\"2022-03-15 11:13\"]\n",
+    "internal_times=[\"2022-03-15 11:18\",\"2022-03-15 12:14\"]\n",
+    "outflow_times=[\"2022-03-15 12:20\",\"2022-03-15 13:15\"]\n",
+    "\n",
+    "warm_icon_evap.loc[\"2022-03-15 10:45\":\"2022-03-15 11:45\"]=np.nan\n",
+    "warm_icon_evap.loc[\"2022-03-15 12:48\":\"2022-03-15 13:15\"]=np.nan\n",
+    "print(warm_icon_evap.std())\n",
+    "\n",
+    "warm_era5_evap=halo_era5[\"Interp_E\"].copy()*-1\n",
+    "warm_era5_evap.loc[\"2022-03-15 10:45\":\"2022-03-15 11:45\"]=np.nan\n",
+    "warm_era5_evap.loc[\"2022-03-15 12:48\":\"2022-03-15 13:15\"]=np.nan\n",
+    "print(warm_era5_evap.mean())"
    ]
   },
   {
