--- a/notebooks/Dropsonde_Surface_Evaporation.ipynb
+++ b/notebooks/Dropsonde_Surface_Evaporation.ipynb
@@ -701,11 +701,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "8714df2a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0005174798818550748"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inflow_times=[\"2022-03-15 10:11\",\"2022-03-15 11:13\"]\n",
+    "internal_times=[\"2022-03-15 11:18\",\"2022-03-15 12:14\"]\n",
+    "outflow_times=[\"2022-03-15 12:20\",\"2022-03-15 13:15\"]\n",
+    "\n",
+    "warm_era5_evap=halo_era5[\"Interp_E\"].copy()*-1\n",
+    "warm_era5_evap.loc[\"2022-03-15 10:45\":\"2022-03-15 11:45\"]=np.nan\n",
+    "warm_era5_evap.loc[\"2022-03-15 12:48\":\"2022-03-15 13:15\"]=np.nan\n",
+    "warm_era5_evap.mean()"
+   ]
   },
   {
    "cell_type": "code",
