--- a/notebooks/HALO_ICON_Budget_Components_Comparison.ipynb
+++ b/notebooks/HALO_ICON_Budget_Components_Comparison.ipynb
@@ -238,18 +238,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'get_precipitation_and_hmps' is not defined",
+     "evalue": "name 'halo_precip_rates' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 46\u001b[0m\n\u001b[0;32m     44\u001b[0m \u001b[38;5;66;03m# precipitation\u001b[39;00m\n\u001b[0;32m     45\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m HiddenPrints():\n\u001b[1;32m---> 46\u001b[0m     precip_rates,halo_icon_hmp,halo_icon_ivt\u001b[38;5;241m=\u001b[39m\u001b[43mget_precipitation_and_hmps\u001b[49m()\n\u001b[0;32m     47\u001b[0m halo_precip_rates\u001b[38;5;241m=\u001b[39mprecip_rates\n\u001b[0;32m     48\u001b[0m halo_precip_rates\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m=\u001b[39mpd\u001b[38;5;241m.\u001b[39mDatetimeIndex(halo_precip_rates\u001b[38;5;241m.\u001b[39mindex)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'get_precipitation_and_hmps' is not defined"
+      "Cell \u001b[1;32mIn[7], line 46\u001b[0m\n\u001b[0;32m     44\u001b[0m \u001b[38;5;66;03m# precipitation\u001b[39;00m\n\u001b[0;32m     45\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m HiddenPrints():\n\u001b[1;32m---> 46\u001b[0m     precip_rates,halo_icon_hmp,halo_icon_ivt\u001b[38;5;241m=\u001b[39m\u001b[43mget_icon_precipitation_and_hmps\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     47\u001b[0m halo_precip_rates\u001b[38;5;241m=\u001b[39mprecip_rates\n\u001b[0;32m     48\u001b[0m halo_precip_rates\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m=\u001b[39mpd\u001b[38;5;241m.\u001b[39mDatetimeIndex(halo_precip_rates\u001b[38;5;241m.\u001b[39mindex)\n",
+      "Cell \u001b[1;32mIn[3], line 49\u001b[0m, in \u001b[0;36mget_icon_precipitation_and_hmps\u001b[1;34m(flight_dates, ars_of_day, sector_to_plot)\u001b[0m\n\u001b[0;32m     47\u001b[0m rate_path \u001b[38;5;241m=\u001b[39mcmpgn_cls\u001b[38;5;241m.\u001b[39mcampaign_path\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/data/precip_rates/\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     48\u001b[0m rate_fname\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwarm\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_precip_\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39mflight\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39mar_of_day\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m---> 49\u001b[0m \u001b[43mhalo_precip_rates\u001b[49m[flight\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39mar_of_day]\u001b[38;5;241m=\u001b[39mpd\u001b[38;5;241m.\u001b[39mread_csv(rate_path\u001b[38;5;241m+\u001b[39mrate_fname,index_col\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     50\u001b[0m halo_precip_rates[flight\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39mar_of_day][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSector\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m=\u001b[39ms\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;28mprint\u001b[39m(halo_precip_rates[flight\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39mar_of_day][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrate\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mdescribe())\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'halo_precip_rates' is not defined"
      ]
     }
    ],
@@ -299,128 +300,26 @@
     "halo_evap=pd.Series(data=[np.nan,np.nan,np.nan,np.nan],index=[\"S1\",\"S2\",\"S3\",\"S4\"])\n",
     "# precipitation\n",
     "with HiddenPrints():\n",
-    "    precip_rates,halo_icon_hmp,halo_icon_ivt=get_precipitation_and_hmps()\n",
+    "    precip_rates,halo_icon_hmp,halo_icon_ivt=get_icon_precipitation_and_hmps()\n",
     "halo_precip_rates=precip_rates\n",
     "halo_precip_rates.index=pd.DatetimeIndex(halo_precip_rates.index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Precip\\nHALO</th>\n",
-       "      <th>Precip\\nICON</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>time</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2022-03-15 10:20:00</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-15 10:20:01</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-15 10:20:02</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-15 10:20:03</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-15 10:20:04</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-15 10:41:38</th>\n",
-       "      <td>0.022518</td>\n",
-       "      <td>0.197954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-15 10:41:39</th>\n",
-       "      <td>0.023811</td>\n",
-       "      <td>0.193901</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-15 10:41:40</th>\n",
-       "      <td>0.024575</td>\n",
-       "      <td>0.189846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-15 10:41:41</th>\n",
-       "      <td>0.024695</td>\n",
-       "      <td>0.185750</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-03-15 10:41:42</th>\n",
-       "      <td>0.024190</td>\n",
-       "      <td>0.181693</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1303 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     Precip\\nHALO  Precip\\nICON\n",
-       "time                                           \n",
-       "2022-03-15 10:20:00      0.000000      0.000000\n",
-       "2022-03-15 10:20:01      0.000000      0.000000\n",
-       "2022-03-15 10:20:02      0.000000      0.000000\n",
-       "2022-03-15 10:20:03      0.000000      0.000000\n",
-       "2022-03-15 10:20:04      0.000000      0.000000\n",
-       "...                           ...           ...\n",
-       "2022-03-15 10:41:38      0.022518      0.197954\n",
-       "2022-03-15 10:41:39      0.023811      0.193901\n",
-       "2022-03-15 10:41:40      0.024575      0.189846\n",
-       "2022-03-15 10:41:41      0.024695      0.185750\n",
-       "2022-03-15 10:41:42      0.024190      0.181693\n",
-       "\n",
-       "[1303 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'halo_icon_hmp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#halo_icon_hmp[\"Interp_Precip\"].loc[\"2022-03-15 10:20\":\"2022-03-15 10:41\"]\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#halo_precip_rates[\"rate\"].loc[\"2022-03-15 10:20\":\"2022-03-15 10:41\"]\u001b[39;00m\n\u001b[0;32m      3\u001b[0m merged_rates\u001b[38;5;241m=\u001b[39mpd\u001b[38;5;241m.\u001b[39mDataFrame(data\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mnan,columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPrecip\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mHALO\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPrecip\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mICON\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[1;32m----> 4\u001b[0m                           index\u001b[38;5;241m=\u001b[39m\u001b[43mhalo_icon_hmp\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterp_Precip\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mloc[halo_precip_rates\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2022-03-15 10:20\u001b[39m\u001b[38;5;124m\"\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2022-03-15 10:41\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mindex]\u001b[38;5;241m.\u001b[39mindex)\n\u001b[0;32m      5\u001b[0m merged_rates[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPrecip\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mICON\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m=\u001b[39mhalo_icon_hmp[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterp_Precip\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mloc[\\\n\u001b[0;32m      6\u001b[0m                                                 halo_precip_rates\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2022-03-15 10:20\u001b[39m\u001b[38;5;124m\"\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2022-03-15 10:41\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mindex]\u001b[38;5;241m.\u001b[39mvalues\n\u001b[0;32m      7\u001b[0m merged_rates[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPrecip\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mHALO\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m=\u001b[39mhalo_precip_rates[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrate\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2022-03-15 10:20\u001b[39m\u001b[38;5;124m\"\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2022-03-15 10:41\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mvalues\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'halo_icon_hmp' is not defined"
+     ]
     }
    ],
    "source": [
