Updated internal precipitation calculations

--- a/notebooks/#old_HALO_AC3_Airborne_Pattern_Budget.ipynb
+++ b/notebooks/#old_HALO_AC3_Airborne_Pattern_Budget.ipynb
@@ -1,12 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a61bf3b",
+   "cell_type": "markdown",
+   "id": "e898e4ef",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 3D Flight Overview"
+   ]
   },
   {
    "cell_type": "code",
@@ -14,7 +14,19 @@
    "id": "e40cbd9d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "map_AR_sea_ice(cfg_dict,radar_ds,ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c0171cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_3d_radar_view(processed_radar,Dropsondes,plot_path)"
+   ]
   },
   {
    "cell_type": "code",
