--- a/notebooks/budget_components_tendency.ipynb
+++ b/notebooks/budget_components_tendency.ipynb
@@ -366,6 +366,293 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>r_norris</th>\n",
+       "      <th>r_palmer</th>\n",
+       "      <th>r_chandra</th>\n",
+       "      <th>s_schoger</th>\n",
+       "      <th>s_matrosov</th>\n",
+       "      <th>s_heymsfield</th>\n",
+       "      <th>mean_snow</th>\n",
+       "      <th>mean_rain</th>\n",
+       "      <th>surface</th>\n",
+       "      <th>precip_phase</th>\n",
+       "      <th>rate</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>Sector</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-03-15 10:11:00</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>71.004653</td>\n",
+       "      <td>5.004385</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-03-15 10:11:01</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>71.005154</td>\n",
+       "      <td>4.998447</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-03-15 10:11:02</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>71.005672</td>\n",
+       "      <td>4.992521</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-03-15 10:11:03</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>71.006207</td>\n",
+       "      <td>4.986605</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-03-15 10:11:04</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>71.006759</td>\n",
+       "      <td>4.980700</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-03-15 12:43:40</th>\n",
+       "      <td>0.013505</td>\n",
+       "      <td>0.027099</td>\n",
+       "      <td>0.064568</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.035058</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>rain</td>\n",
+       "      <td>0.035058</td>\n",
+       "      <td>76.508363</td>\n",
+       "      <td>0.998858</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-03-15 12:43:41</th>\n",
+       "      <td>0.015217</td>\n",
+       "      <td>0.030239</td>\n",
+       "      <td>0.075623</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.040359</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>rain</td>\n",
+       "      <td>0.040359</td>\n",
+       "      <td>76.508878</td>\n",
+       "      <td>0.990786</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-03-15 12:43:42</th>\n",
+       "      <td>0.015019</td>\n",
+       "      <td>0.029878</td>\n",
+       "      <td>0.074324</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.039741</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>rain</td>\n",
+       "      <td>0.039741</td>\n",
+       "      <td>76.509393</td>\n",
+       "      <td>0.982711</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-03-15 12:43:43</th>\n",
+       "      <td>0.014886</td>\n",
+       "      <td>0.029634</td>\n",
+       "      <td>0.073451</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.039324</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>rain</td>\n",
+       "      <td>0.039324</td>\n",
+       "      <td>76.509914</td>\n",
+       "      <td>0.974553</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-03-15 12:43:44</th>\n",
+       "      <td>0.014377</td>\n",
+       "      <td>0.028701</td>\n",
+       "      <td>0.070142</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.037740</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>rain</td>\n",
+       "      <td>0.037740</td>\n",
+       "      <td>76.510425</td>\n",
+       "      <td>0.966555</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4939 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     r_norris  r_palmer  r_chandra  s_schoger  s_matrosov  \\\n",
+       "2022-03-15 10:11:00  0.000000  0.000000   0.000000        0.0         0.0   \n",
+       "2022-03-15 10:11:01  0.000000  0.000000   0.000000        0.0         0.0   \n",
+       "2022-03-15 10:11:02  0.000000  0.000000   0.000000        0.0         0.0   \n",
+       "2022-03-15 10:11:03  0.000000  0.000000   0.000000        0.0         0.0   \n",
+       "2022-03-15 10:11:04  0.000000  0.000000   0.000000        0.0         0.0   \n",
+       "...                       ...       ...        ...        ...         ...   \n",
+       "2022-03-15 12:43:40  0.013505  0.027099   0.064568        0.0         0.0   \n",
+       "2022-03-15 12:43:41  0.015217  0.030239   0.075623        0.0         0.0   \n",
+       "2022-03-15 12:43:42  0.015019  0.029878   0.074324        0.0         0.0   \n",
+       "2022-03-15 12:43:43  0.014886  0.029634   0.073451        0.0         0.0   \n",
+       "2022-03-15 12:43:44  0.014377  0.028701   0.070142        0.0         0.0   \n",
+       "\n",
+       "                     s_heymsfield  mean_snow  mean_rain  surface precip_phase  \\\n",
+       "2022-03-15 10:11:00           0.0        0.0   0.000000      4.0            0   \n",
+       "2022-03-15 10:11:01           0.0        0.0   0.000000      4.0            0   \n",
+       "2022-03-15 10:11:02           0.0        0.0   0.000000      4.0            0   \n",
+       "2022-03-15 10:11:03           0.0        0.0   0.000000      4.0            0   \n",
+       "2022-03-15 10:11:04           0.0        0.0   0.000000      4.0            0   \n",
+       "...                           ...        ...        ...      ...          ...   \n",
+       "2022-03-15 12:43:40           0.0        0.0   0.035058      0.0         rain   \n",
+       "2022-03-15 12:43:41           0.0        0.0   0.040359      0.0         rain   \n",
+       "2022-03-15 12:43:42           0.0        0.0   0.039741      0.0         rain   \n",
+       "2022-03-15 12:43:43           0.0        0.0   0.039324      0.0         rain   \n",
+       "2022-03-15 12:43:44           0.0        0.0   0.037740      0.0         rain   \n",
+       "\n",
+       "                         rate        lat       lon  Sector  \n",
+       "2022-03-15 10:11:00  0.000000  71.004653  5.004385       1  \n",
+       "2022-03-15 10:11:01  0.000000  71.005154  4.998447       1  \n",
+       "2022-03-15 10:11:02  0.000000  71.005672  4.992521       1  \n",
+       "2022-03-15 10:11:03  0.000000  71.006207  4.986605       1  \n",
+       "2022-03-15 10:11:04  0.000000  71.006759  4.980700       1  \n",
+       "...                       ...        ...       ...     ...  \n",
+       "2022-03-15 12:43:40  0.035058  76.508363  0.998858       1  \n",
+       "2022-03-15 12:43:41  0.040359  76.508878  0.990786       1  \n",
+       "2022-03-15 12:43:42  0.039741  76.509393  0.982711       1  \n",
+       "2022-03-15 12:43:43  0.039324  76.509914  0.974553       1  \n",
+       "2022-03-15 12:43:44  0.037740  76.510425  0.966555       1  \n",
+       "\n",
+       "[4939 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precip_rates[\"RF05_AR_entire_1\"]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
