Exchanged Code Author name to Henning Dorff

--- a/notebooks/ERA5_Budget_Components_Map.ipynb
+++ b/notebooks/ERA5_Budget_Components_Map.ipynb
@@ -18,7 +18,7 @@
     "\"\"\"\n",
     "Created on Mon Aug 24 16:35:51 2020\n",
     "\n",
-    "@author: u300737\n",
+    "@author: Henning Dorff\n",
     "\"\"\"\n",
     "import os\n",
     "import sys\n",
