--- a/notebooks/#old_HALO_AC3_Airborne_Pattern_Budget.ipynb
+++ b/notebooks/#old_HALO_AC3_Airborne_Pattern_Budget.ipynb
@@ -10,10 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e40cbd9d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'map_AR_sea_ice' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmap_AR_sea_ice\u001b[49m(cfg_dict,radar_ds,ds)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'map_AR_sea_ice' is not defined"
+     ]
+    }
+   ],
    "source": [
     "map_AR_sea_ice(cfg_dict,radar_ds,ds)"
    ]
